--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div class="footer fixed-bottom" th:fragment="footer">
-    <p style="text-align: center;">&copy; Aylees Kubernetes Sample App</p>
-</div>
+<footer class="footer mt-auto py-3 bg-light">
+    <div class="container">
+        <p class="text-muted text-center">&copy; Aylees Kubernetes Sample App</p>
+    </div>
+</footer>
