--- a/src/main/resources/templates/dataList.html
+++ b/src/main/resources/templates/dataList.html
@@ -1,42 +1,23 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-
-  to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-
-  ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
-    <title>OpenShift Demo</title>
+<head th:replace="fragments/header :: header">
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body>
+<body class="d-flex flex-column h-100">
 
 <div class="container">
-    <ul class="nav nav-pills pull-right">
-        <li><a href="/">Home</a></li>
-    </ul>
-
-
+    <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <table class="table table-striped">
-
         <thead>
-
-        <tr> <th>#</th> <th>이름</th>
-
-        </tr>
-
+            <tr> <th>#</th> <th>Data</th></tr>
         </thead>
-
         <tbody>
-
-        <tr th:each="helloData : ${helloDatas}"> <td th:text="${helloData.id}"></td> <td th:text="${helloData.inputData}"></td>
-
-        </tr> </tbody> </table> </div>
+            <tr th:each="helloData : ${helloDatas}"> <td th:text="${helloData.id}"></td> <td th:text="${helloData.inputData}"></td></tr>
+        </tbody>
+    </table>
+</div>
 
 </div> <!-- /container -->
-
+<div th:replace="fragments/footer :: footer" />
 </body> </html>
