--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,47 +4,49 @@
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body class="d-flex flex-column h-100">
-<div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
-    <form action="/hello" method="GET" id="nameForm">
-        <div class="row py-5 g-3 align-items-center d-flex justify-content-center">
-            <div class="col-auto">
-                <label for="nameField" class="col-form-label">Data</label>
+<body class="d-flex flex-column h-100 min-vh-100">
+<main class="flex-shrink-0">
+    <div class="container">
+        <div th:replace="fragments/bodyHeader :: bodyHeader" />
+        <form action="/hello" method="GET" id="nameForm">
+            <div class="row py-5 g-3 align-items-center d-flex justify-content-center">
+                <div class="col-auto">
+                    <label for="nameField" class="col-form-label">Data</label>
+                </div>
+                <div class="col-auto">
+                    <input class="form-control" name="myName" id="nameField">
+                </div>
+                <div class="col-auto">
+                    <span class="form-text">
+                      Enter the data to be saved in the database.
+                    </span>
+                </div>
+                <div class="d-grid gap-2 d-md-block  d-md-flex justify-content-md-center">
+                    <button class="btn btn-outline-primary btn-sm">Submit</button>
+                </div>
             </div>
-            <div class="col-auto">
-                <input class="form-control" name="myName" id="nameField">
-            </div>
-            <div class="col-auto">
-                <span class="form-text">
-                  Enter the data to be saved in the database.
-                </span>
-            </div>
-            <div class="d-grid gap-2 d-md-block  d-md-flex justify-content-md-center">
-                <button class="btn btn-outline-primary btn-sm">Submit</button>
-            </div>
-        </div>
-    </form>
-    <h1 class="text-center">Version</h1>
-    <h1 class="display-5 px-4 text-center" th:text="${version}">Empty🙀</h1>
+        </form>
+        <h1 class="text-center">Version</h1>
+        <h1 class="display-5 px-4 text-center" th:text="${version}">Empty🙀</h1>
 
-    <dl class="row py-5" style="max-width: 580px; margin: 0 auto">
-        <dt class="col-sm-3">Node Name</dt>
-        <dd class="col-sm-9" th:text="${infraInfo.nodeName}"></dd>
+        <dl class="row py-5" style="max-width: 580px; margin: 0 auto">
+            <dt class="col-sm-3">Node Name</dt>
+            <dd class="col-sm-9" th:text="${infraInfo.nodeName}"></dd>
 
-        <dt class="col-sm-3">Node IP</dt>
-        <dd class="col-sm-9" th:text="${infraInfo.nodeIP}"></dd>
+            <dt class="col-sm-3">Node IP</dt>
+            <dd class="col-sm-9" th:text="${infraInfo.nodeIP}"></dd>
 
-        <dt class="col-sm-3">Pod Name</dt>
-        <dd class="col-sm-9" th:text="${infraInfo.podName}"></dd>
+            <dt class="col-sm-3">Pod Name</dt>
+            <dd class="col-sm-9" th:text="${infraInfo.podName}"></dd>
 
-        <dt class="col-sm-3">Pod IP</dt>
-        <dd class="col-sm-9" th:text="${infraInfo.podIP}"></dd>
+            <dt class="col-sm-3">Pod IP</dt>
+            <dd class="col-sm-9" th:text="${infraInfo.podIP}"></dd>
 
-        <dt class="col-sm-3">Namespace</dt>
-        <dd class="col-sm-9" th:text="${infraInfo.namespace}"></dd>
-    </dl>
-</div> <!-- /container -->
+            <dt class="col-sm-3">Namespace</dt>
+            <dd class="col-sm-9" th:text="${infraInfo.namespace}"></dd>
+        </dl>
+    </div> <!-- /container -->
+</main>
 <div th:replace="fragments/footer :: footer" />
 </body>
 </html>
